--- a/WebAppSer/WebAppSer/Views/Shared/_Layout.cshtml
+++ b/WebAppSer/WebAppSer/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
+    <title>Servicio de empleados</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -17,14 +17,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nombre de aplicación", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Empleados", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
-                    <li><a href="http://localhost:60682/Servicios/WebServiceTest.asmx" target="_blank">Servicio Act</a></li>
-                    <li>@Html.ActionLink("Contacto", "Contact", "Home")</li>
-                    
+                    <li><a href="http://localhost:60682/Servicios/WebServiceTest.asmx" target="_blank">Servicio Act</a></li>             
                 </ul>
             </div>
         </div>
